--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,9 @@
 # dependencies
 /node_modules
 
-.gitignore
+# profiling files
+chrome-profiler-events.json
+speed-measure-plugin.json
 
 # IDEs and editors
 /.idea
