--- a/practice/angular.json
+++ b/practice/angular.json
@@ -61,7 +61,8 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "movie-app:build"
+            "browserTarget": "movie-app:build",
+            "proxyConfig": "proxy.config.json"
           },
           "configurations": {
             "production": {
