--- a/practice/angular.json
+++ b/practice/angular.json
@@ -61,8 +61,7 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "movie-app:build",
-            "proxyConfig": "proxy.config.json"
+            "browserTarget": "movie-app:build"
           },
           "configurations": {
             "production": {
