--- a/practice/proxy.config.json
+++ b/practice/proxy.config.json
@@ -1,6 +1,6 @@
 {   
-    "/films": {
-        "target": "http://localhost:3001",
+    "/films/*": {
+        "target": "http://localhost:3000",
         "secure": false,
         "logLevel": "debug"
     }  
